--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <h1>Lista de mascotas:</h1>
     <p><a href="mascota1.html">Mascota de Robert</a></p>
-    <p><a href="mascota2.html">Mascota de Gonzalo</a></p>
-    <p><a href="mascota3.html">Mascota de Facundo</a></p>
-    <p><a href="mascota4.html">Mascota de Federico</a></p>
+    <p><a href="mascota2.html">Mascota de Felipe</a></p>
+    <p><a href="mascota3.html">Mascota de Franco</a></p>
+    <p><a href="mascota4.html">Mascota de Macarena</a></p>
     <p><a href="mascota5.html">Mascota de Álvaro</a></p>
     <p><a href="resumen.html">Resumen de todas las mascotas</a></p>
     
