cambio en el nombre de la mascota en mascota 1

--- a/mascota1.html
+++ b/mascota1.html
@@ -10,7 +10,7 @@
 <body>
     <h2>Mascota de Robert:</h2>
     <img src="https://statics-cuidateplus.marca.com/cms/styles/ratio_43/azblob/serpiente-azul.jpg.webp?itok=90TnETm_" alt="serpiente">
-    <p>Nombre: Pancho.</p>
+    <p>Nombre: Orochi.</p>
     <p>Gustos: Ratones.</p>
     <p>Datos: Mide 2mt.</p>
     <p><a href="index.html">Inicio</a></p>
