--- a/Sio.html
+++ b/Sio.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="estilos/styleMascota.css">
 </head>
 <body>
-    <h2>Mascota de Gonzalo:</h2>
+    <h2>Mascota de Felipe:</h2>
     <img src="https://images.unsplash.com/photo-1617895153857-82fe79adfcd4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8MXx8fGVufDB8fHx8&w=1000&q=80" alt="husky">
-    <p>Nombre: Lobito.</p>
+    <p>Nombre: Sio.</p>
     <p>Gustos: Gatitos.</p>
     <p>Datos: Le gusta el frío.</p>
     <p><a href="index.html">Inicio</a></p>
