--- a/mascota3.html
+++ b/mascota3.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="estilos/styleMascota.css">
 </head>
 <body>
-    <h2>Mascota de Facundo:</h2>
+    <h2>Mascota de Franco:</h2>
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSrDZyNtngwpyv1Kuuqs5hEOAqu4xGlit1bPQ&usqp=CAU" alt="hamster">
-    <p>Nombre: Carlos.</p>
-    <p>Gustos: Sacarse fotos.</p>
-    <p>Datos: Duerme 14hs por día.</p>
+    <p>Nombre: Luzu.</p>
+    <p>Gustos: El jamón.</p>
+    <p>Datos: Perrea muy bien.</p>
     <p><a href="index.html">Inicio</a></p>
 </body>
 </html>
