--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Lista de mascotas:</h1>
     <p><a href="mascota1.html">Mascota de Robert</a></p>
-    <p><a href="mascota2.html">Mascota de Felipe</a></p>
+    <p><a href="Sio.html">Mascota de Felipe</a></p>
     <p><a href="mascota3.html">Mascota de Franco</a></p>
     <p><a href="mascota4.html">Mascota de Macarena</a></p>
     <p><a href="mascota5.html">Mascota de Álvaro</a></p>
