--- a/mascota3.html
+++ b/mascota3.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h2>Mascota de Franco:</h2>
-    <img src="https://drive.google.com/file/d/1Tb9WZnVBn15B-JVjlTbzNOU1hNxoSmg8/view?usp=sharing" alt="perro">
+    <img src="https://iili.io/SyDXtV.jpg" alt="perro" border="0">
     <p>Nombre: Luzu.</p>
     <p>Gustos: El jamón.</p>
     <p>Datos: Perrea muy bien.</p>
